finish to translate site

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,6 +5,9 @@
   "Activites":"Activities",
   "Contact":"Contact",
   "choose":"Choose language",
+  "lang-fr":"French",
+  "lang-en":"English",
+  "lang-nl":"Dutch",
   "header.title-rotation":"pad business network foundation",
   "header.t.sylab":"Pad",
   "header.t.sylab-second":"Business",
@@ -28,9 +31,15 @@
   "objectif-title":"Goals",
   "objectif-rotation":"our goals",
   "objectif.t2.sylab":"Mainly Capacity Building",
-  "obejctif.t2.sylab-second":"Economic Of Afro-Descendant People.",
+  "objectif.t2.sylab-second":"Economic Of Afro-Descendant People.",
   "objectif.t3.sylab":"We achieve our goals through Coaching,",
   "objectif.t3.sylab-second":"Networking and Funding.",
+  "objectif-coaching.t":"1. Le Coaching",
+  "objectif-coaching.p":"PAD Biz has set itself the objective of developing human capital in order to access education, which is a fundamental right and enables development to be strengthened.",
+  "objectif-networking.t":"2. Le Networking",
+  "objectif-networking.p":"PAD Biz sets itself the objective of networking its members, in order to create synergies and strengthen interactions and business opportunities with players in the economic world.",
+  "objectif-financement.t":"3. Funding",
+  "objectif-financement.p":"We finance, invest in the projects of our members thanks to our sponsors and funders.",
   "activites-rotation":"our activities",
   "activites.t.sylab":"Our",
   "activites.t.sylab-second":"Activities ",
@@ -38,10 +47,29 @@
   "activites.p.sylab":"We help our members to realize their nature projects", "activites.p.sylab-second":"entrepreneurial, through close support. Our",
   "activites.p.sylab-third":"  experts support the drafting of projects, the plan",
   "activites.p.sylab-forth":"financial and legal advice.",
+  "activites-section.t":"2. Awareness and",
+  "activites-section.t.sylab":"Training.",
+  "activites-section.2.1":"2.1. <span class='bold'>PAD business</span> connects its members with potential investors and sponsors.",
+  "activites-section.2.2":"2.2.  Entrepreneurship awareness and training via all traditional and digital communication channels.",
+  "activites-section.2.3":"2.3. The provision of legal, social, cultural workshops (languages, art, writing, etc.).",
+  "activites-section.2.4":"2.4. homework school for young people and adults.",
+  "activites-section.2.5":"2.5.Funding of our members' projects thanks to our sponsors and funders.",
+  "activites-section.2.6":"2.6. The creation of an “each one, teach one” platform for mentoring, to help young people identify with successful people in their business.",
   "contact-rotation":"Contact us.",
   "contact.t.sylab":"Contact",
   "contact.t.sylab-second":"Us",
   "contact.p.sylab":"With the collaboration of",
   "contact.p.sylab-second":"Cité des Métiers / UNIDO",
-  "contact.p.sylab-third":"ENPAD / CHANGE asbl"
+  "contact.p.sylab-third":"ENPAD / CHANGE asbl",
+  "contact.address.t":"Address",
+  "contact.address.info":"Square de Meeûs,35 <br/> 1000 Brussels <br/> Belgium",
+  "contact.donate.t":"Support us/Donate ",
+  "contact.donate.info":"pad.business.network@gmail.com <br/> BE82 0689 3456 0368 - BIC:GKCCBEBB",
+  "contact.mobile":"Mobile",
+  "contact.mobile.info":"+32 484 52 32 63 <br/> +243 822 77 07 04",
+  "contact.community":"Community",
+  "contact.community.info":"<a href='https://docs.google.com/forms/d/e/1FAIpQLSdxnD-tc_WapS6RERnFAmf980qfOGVwGSgwgIjeTpCNJDvs5Q/viewform'>Join our community</a>",
+  "contact.email":"Email",
+  "contact.email.info":"<a href='mailto:info@padbiz.org'>info@padbiz.org</a>",
+  "contact.follow":"Follow us"
 }
