--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -5,6 +5,9 @@
   "Activites":"Activiteiten",
   "Contact":"Contact",
   "choose":"Kies een taal",
+  "lang-fr":"Frans",
+  "lang-en":"Engels",
+  "lang-nl":"Nederlands",
   "header.title-rotation":"pad zakelijk netwerk stichting",
   "header.t.sylab":"Pad",
   "header.t.sylab-second":"Zaken",
@@ -28,10 +31,15 @@
   "objectif-title":"Doelen",
   "objectif-rotation":"onze doelen",
   "objectif.t2.sylab":"Voornamelijk capaciteitsopbouw",
-  "obejctif.t2.sylab-second":"Economisch van Afro-afstammelingen.",
-
+  "objectif.t2.sylab-second":"Economisch van Afro-afstammelingen.",
   "objectif.t3.sylab":"Wij bereiken onze doelen door middel van coaching",
   "objectif.t3.sylab-second":"Netwerken en financieren.",
+  "objectif-coaching.t":"1. Coachen",
+  "objectif-coaching.p":"PAD Biz heeft zich ten doel gesteld menselijk kapitaal te ontwikkelen om toegang te krijgen tot onderwijs, wat een grondrecht is en de ontwikkeling mogelijk maakt.",
+  "objectif-networking.t":"2. Le Netwerken",
+  "objectif-networking.p":"PAD Biz stelt zich ten doel haar leden te netwerken, om synergieën te creëren en interacties en zakelijke kansen met spelers in de economische wereld te versterken.",
+  "objectif-financement.t":"3. Financiering",
+  "objectif-financement.p":"We financieren, investeren in de projecten van onze leden dankzij onze sponsors en financiers.",
   "activites-rotation":"onze activiteiten ",
   "activites.t.sylab":"Onze",
   "activites.t.sylab-second":"Activiteiten",
@@ -40,11 +48,30 @@
   "activites.p.sylab-second":"ondernemend, door nauwe ondersteuning. Onze",
   "activites.p.sylab-third":"experts ondersteunen bij het opstellen van projecten, het plan",
   "activites.p.sylab-forth":"financieel en juridisch advies.",
+  "activites-section.t":"2. Bewustzijn en",
+  "activites-section.t.sylab":"Opleiding.",
+  "activites-section.2.1":"2.1. <span class='bold'>PAD zaken</span> verbindt haar leden met potentiële investeerders en sponsors.",
+  "activites-section.2.2":"2.2.  Bewustwording en training van ondernemerschap via alle traditionele en digitale communicatiekanalen.",
+  "activites-section.2.3":"2.3. Het aanbieden van juridische, sociale, culturele workshops (talen, kunst, schrijven, enz.).",
+  "activites-section.2.4":"2.4. huiswerkschool voor jongeren en volwassenen.",
+  "activites-section.2.5":"2.5.Financiering van de projecten van onze leden dankzij onze sponsors en financiers.",
+  "activites-section.2.6":"2.6.De oprichting van een “iedereen, leer een”-platform voor mentoring, om jonge mensen te helpen zich te identificeren met succesvolle mensen in hun bedrijf.",
   "contact-rotation":"Neem contact op.",
   "contact.t.sylab":"Contact",
   "contact.t.sylab-second":"Ons",
   "contact.p.sylab":"Met medewerking van",
   "contact.p.sylab-second":"Stad van Handel / UNIDO",
-  "contact.p.sylab-third":"ENPAD / CHANGE asbl"
+  "contact.p.sylab-third":"ENPAD / CHANGE asbl",
+  "contact.address.t":"Adres",
+  "contact.address.info":"Square de Meeûs,35 <br/> 1000 Brussel <br/> België",
+  "contact.donate.t":"Steun ons/doneer ",
+  "contact.donate.info":"pad.business.network@gmail.com <br/> BE82 0689 3456 0368 - BIC:GKCCBEBB",
+  "contact.mobile":"Mobiel",
+  "contact.mobile.info":"+32 484 52 32 63 <br/> +243 822 77 07 04",
+  "contact.community":"Gemeenschap",
+  "contact.community.info":"<a href='https://docs.google.com/forms/d/e/1FAIpQLSdxnD-tc_WapS6RERnFAmf980qfOGVwGSgwgIjeTpCNJDvs5Q/viewform'>Sluit je aan bij onze gemeenschap</a>",
+  "contact.email":"E-mail",
+  "contact.email.info":"<a href='mailto:info@padbiz.org'>info@padbiz.org</a>",
+  "contact.follow":"Volg ons"
 
 }
